테스트 임포트가 꼬였는지... 재 다운로드하여 롤백

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=3000
 
-# 라이브 리로드 설정
+# 라이브 리로드 설정 -> 새로고침으로 바로 반영 가능
 spring.devtools.livereload.enabled=true
 
 # 스프링 JDBC 설정
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# 맨 뒤(orcl)는 DB 스키마 이름
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=BOARD_B2
 spring.datasource.password=_aA123456
@@ -13,5 +14,7 @@ spring.datasource.password=_aA123456
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
+
 # 정적 자원 (CSS, JS, 이미지)
+# resource 에 새로운 디렉토리를 생성하여 정적 자원 경로를 변경할 수 있음
 spring.resources.static-locations=file:src/main/resources/static/
