A component required a bean named 'entityManagerFactory' that could not be found. 에러가 해결이 안 됨...ㅠ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.thymeleaf.prefix=file:src/main/resources/templates/
 # 정적 자원 (CSS, JS, 이미지)
 # resource 에 새로운 디렉토리를 생성하여 정적 자원 경로를 변경할 수 있음
 spring.resources.static-locations=file:src/main/resources/static/
+
+# JPA 쿼리 출력 여부
+spring.jpa.show-sql=true
+# Hibernate DDL 자동 생성 설정
+spring.jpa.hibernate.ddl-auto=update
